<resources>
    <string name="app_name">Logic app</string>
    <string name="a">A</string>
    <string name="conjunction_and">Conjunction (AND)</string>
    <string name="b">B</string>
    <string name="a_b">A^B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="submit">SUBMIT</string>
    <string name="correct">All answers are correct!</string>
    <string name="incorrect">One or more of your answers is incorrect!</string>
</resources>
